fix(webflux): Specify allow method TRACE in the config